# messengerclient

./: CMakeLists.txt  Diary.txt  README.md  messengerclient.cpp  messengerclient.h
